--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'android'
 
 android {
-    compileSdkVersion 'android-L'
-    buildToolsVersion '20.0.0'
+    compileSdkVersion 19
+    buildToolsVersion '19.1.0'
+
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 'android-L'
+        minSdkVersion 14
+        targetSdkVersion 19
         versionCode 1
         versionName '1.0'
     }
@@ -15,13 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
-    productFlavors {
-    }
 }
 
 dependencies {
+    compile 'com.android.support:support-v4:20.0.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:gridlayout-v7:+'
-    compile 'com.android.support:support-v4:21.+'
-    compile 'com.android.support:cardview-v7:+'
 }
